[package]
name = "fooskill"
version = "0.1.0"
authors = ["Martin Kiefel <mk@nopw.de>"]
edition = "2018"

[dependencies]
base64 = "0.10"
libm = "0.1.4"
percent-encoding = "2.1.0"
quick-error = "1.2.3"
r2d2_redis = "0.12.0"
redis = "0.13"
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
transaction = "0.2.1"
uuid = { version = "0.4", features = ["serde", "v4"] }

[dependencies.cookie]
version = "0.11.1"
features = ["secure"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve", "databases", "tera_templates"]