[package]
name = "fooskill"
version = "0.1.0"
authors = ["Martin Kiefel <mk@nopw.de>"]
edition = "2018"

[dependencies]
async-trait = "0.1.56"
base64 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.3"
libm = "0.1.4"
percent-encoding = "2.1.0"
quick-error = "1.2.3"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.4", features = ["serde", "v4"] }

[dependencies.cookie]
version = "0.16.0"
features = ["secure"]

# [dependencies.rocket_contrib]
# version = "0.4.2"
# default-features = false
# features = ["serve", "databases", "tera_templates"]
